# django-history-triggers

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README  README.md  docker-compose.yml  manage.py  pyproject.toml  runtests.py  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
history/: __init__.py  admin.py  apps.py  conf.py  middleware.py  models.py  utils.py
history/backends/: __init__.py  base.py  postgres.py  sqlite.py
history/contrib/loaddata/management/commands/: loaddata.py
history/contrib/migrate/management/commands/: migrate.py
history/management/commands/: triggers.py
history/migrations/: 0001_initial.py
history/templates/history/: admin_history.html
history/templatetags/: history.py
src/history/: __init__.py  admin.py  middleware.py
src/history/backends/: __init__.py
src/history/contrib/loaddata/: apps.py
src/history/contrib/migrate/: apps.py
src/history/templates/history/: admin_history.html
testapp/: models.py  settings.py  tests.py  urls.py  views.py
testapp/migrations/: 0001_initial.py
tests/: settings.py
tests/custom/: models.py  tests.py  urls.py  views.py
