[project]
name = "django-history-triggers"
version = "3.6.0"
authors = [
    {name = "Dan Watson", email = "watsond@imsweb.com"},
]
description = "Management command and middleware for Django history triggers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-2-Clause"}
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/imsweb/django-history-triggers"

[dependency-groups]
dev = [
    "django",
    "psycopg[binary]",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "history"

[tool.ruff.lint]
extend-select = ["I"]
isort.known-first-party = ["history"]
